# TackleBox

./: Cargo.toml  Dockerfile.gnu  Dockerfile.musl  README.md  arch.md  build.rs  metadata.json  platform.excalidraw  try_build.sh
.sqlx/: query-0914a8395d98f142d83128092beae8330d99a4b42383ad4dcd158256036c4a0d.json  query-0ee197733e76c0e492153db4ec38477ed604b23e9ba356c1229a24504b2d9bc9.json  query-0f6145094007fdced148d362f35ed52145f8fe27520c399f2d05b4b4604d0dae.json  query-1eec5ab8a3134871a6f5f0552dfa6536ffeeb13428438757d5de0cf79724e67c.json  query-2bd007e685e82934d3035c7d66204b39b78d1c34dcc703ca12444f3df1ca2dce.json  query-58148908e959cc8dd954bac1d215381864b68462615dfbf2343f1c429ca53ce0.json  query-6cfe947b614e47274dcac6c5cd72d0da830916729f5365cc6d8d6b94a48b461f.json  query-6f2e2619844528aa8aa62efacd2c91c560e857397ca0bc07e5d18b930d665969.json  query-7d440a239cbaf5b981779900b80fa43efaa57ce62f448816cb10a58114e357f0.json  query-828baef03f5c1969e625a1c621b41eb16052ececac4a74295986d015a663401d.json  query-82e261e9f0c0d52e3564929297a85daf794c9616be8d51cded7d96cf4132f33d.json  query-930e8a6aac5902ebb94f4ddb885abe0c663f34a5a770da843dc1d58fae391059.json  query-93911f41c14d4325719e2baaac39191e5e1a94bafb6fee1581ad6861323d38cd.json  query-9693d5a222530f50dee3a06a24d4d745b87efceba59b66baf4fd73e5b460d8df.json  query-a2ed11a14be96a626c4dfe28d984ca59ad37d9e0edcc2c2b2377b949386039a2.json  query-b11275709e48473bb88251b434a60a8fc0b657c3c21a8c40576c34f1e311109b.json  query-b612e4115fb46d944067f1c317a775610b207d2e0a60dba64ae9974d70b48d34.json  query-cba0d2591b84be73445b47e2bd06db6b1bb49965052b9365c00d7f2a531ef0ef.json  query-cc71ca6e65d649c24b0ad14b83d2bf56c9012f28e967b41e6cebde1b44790741.json  query-d226909072dbce2f000f45775c3290a59fd0ed082e8a650d69af1f56cad61476.json  query-d434ddc5f7ceb30bf1add5ad6383059bdeb7a86ca28b51275eaffe1901bc3cfc.json  query-d8f235f278f0551d41825c179389e3b621dbddc51092f21ef7a3682cd0d0a224.json  query-e4ff9d80e52f594fccc0f8500731d925d9e029380fdacd16cae6eadfc1053a7b.json  query-efce3df522306d09970427c13931cfa61f956d7cf862f39ab14521d6f4187bd2.json
docs/: arch.md
entity/: Cargo.toml
entity/src/: game.rs  game_input.rs  game_participant.rs  game_state.rs  game_type.rs  lib.rs  user.rs
fountend/: index.html  pnpm-lock.yaml
fountend/src/: App.tsx
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx
game_sponsor/: Dockerfile  agent.py  sponsor_grpc.py  sponsor_pb2.py  tacklebox_wrapper.py  test.ipynb
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
proto/: client.proto  sponsor.proto
src/: api.rs  contracts.rs  core.rs  lib.rs  main.rs  repo.rs
src/api/: app.rs  client.rs  command.rs  entities.rs  error.rs  extractor.rs  game.rs  handler.rs  manager.rs  mod.rs  platform.rs  utils.rs  ws.rs
src/contracts/: grpc.rs  payloads.rs  payloads_v1.rs  payloads_v2.rs
src/core/: agents.rs  auth.rs  client.rs  core.rs  matches.rs  orchestrator.rs  stats.rs
src/game/: mod.rs  poker.rs
src/repo/: agents.rs  error.rs  (+7 more)
(+21 files in other folders)
