[package]
name = "TackleBox"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1.88"
rand = "0.9.2"
futures-util = "^0.3"
chrono = { version = "0.4.41", features = ["serde"]}
argon2 = { version = "0.5.3", features = ["password-hash", "zeroize", "alloc"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }