[package]
name = "tackle_box"
version = "0.0.1"
edition = "2021"

# [features]
# static_ssl = ['openssl/vendored']

[dependencies]
# tower-http = "0.6.6"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2.0.16"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "^0.3"
chrono = { version = "0.4.41", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["password-hash", "zeroize", "alloc"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "tls-rustls",
] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-types = "0.14.2"
prost-types = "0.14.1"
tonic-prost = "0.14.2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
tokio-stream = "0.1.17"
base64 = "0.22.1"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
http-body-util = "0.1.3"

[build-dependencies]
tonic-prost-build = "0.14.2"
